- fix dark mode styling

--- a/packages/@mikoshi/application-components/src/components/DataGrid/_style.scss
+++ b/packages/@mikoshi/application-components/src/components/DataGrid/_style.scss
@@ -43,6 +43,7 @@
         @include rules('m-bg-grey-1');
       }
 
+      body.dark &,
       .app[data-theme='dark'] & {
         @include rules('m-bg-lgrey-1');
 
@@ -57,6 +58,7 @@
   .ag-body-viewport {
     @include rules('m-frost-glass-lgrey-3', 'm-color-grey-1');
 
+    body.dark &,
     .app[data-theme='dark'] & {
       @include rules('m-frost-glass-night-2', 'm-color-blueberry-1');
     }
@@ -66,6 +68,7 @@
   .ag-header-viewport {
     @include rules('m-frost-glass-lgrey-4', 'm-color-grey-1');
 
+    body.dark &,
     .app[data-theme='dark'] & {
       @include rules('m-frost-glass-night-2', 'm-color-blueberry-1');
     }
@@ -79,6 +82,7 @@
       border-left-width: .5px;
       border-left-style: solid;
 
+      body.dark &,
       .app[data-theme='dark'] & {
         @include rules('m-color-white', 'm-border-blueberry-1');
       }
@@ -102,11 +106,13 @@
       border-left-width: .5px;
       border-left-style: solid;
 
+      body.dark &,
       .app[data-theme='dark'] & {
         @include rules('m-border-blueberry-1');
       }
     }
 
+    body.dark &,
     .app[data-theme='dark'] & {
       @include rules('m-border-blueberry-1');
     }
