--- a/packages/@mikoshi/core-components/src/components/AppBar/_style.scss
+++ b/packages/@mikoshi/core-components/src/components/AppBar/_style.scss
@@ -4,6 +4,7 @@
     @include rules('m-flex', 'm-flex-row', 'm-frost-glass-blue-1', 'm-color-grey-1');
     padding: 1rem;
 
+    body.dark &,
     .app[data-theme='dark'] & {
       @include rules('m-color-white');
     }
@@ -11,6 +12,7 @@
     .mikoshi-button {
       @include rules('m-color-grey-1');
 
+      body.dark &,
       .app[data-theme='dark'] & {
         @include rules('m-color-white');
       }
