--- a/packages/@mikoshi/core-components/src/components/Modal/_style.scss
+++ b/packages/@mikoshi/core-components/src/components/Modal/_style.scss
@@ -17,6 +17,7 @@
       left: 0;
       background-color: rgba(#000, .55);
 
+      body.dark &,
       .app[data-theme='dark'] & {
         background-color: rgba(#000, .75);
       }
@@ -27,6 +28,7 @@
       max-height: 60vh;
       border-radius: .6rem;
 
+      body.dark &,
       .app[data-theme='dark'] & {
         @include rules('m-frost-glass-night-2', 'm-color-blueberry-1');
       }
@@ -39,6 +41,7 @@
         font-size: .9rem;
         font-weight: 400;
 
+        body.dark &,
         .app[data-theme='dark'] & {
           @include rules('m-color-blueberry-1');
         }
