--- a/packages/@mikoshi/core-components/src/components/Scroll/_style.scss
+++ b/packages/@mikoshi/core-components/src/components/Scroll/_style.scss
@@ -22,6 +22,7 @@
       @include rules('m-bg-grey-1');
     }
 
+    body.dark &,
     .app[data-theme='dark'] & {
       @include rules('m-bg-lgrey-1');
 
