--- a/packages/@mikoshi/core-components/src/components/Typography/_style.scss
+++ b/packages/@mikoshi/core-components/src/components/Typography/_style.scss
@@ -1,6 +1,7 @@
 .mikoshi-typography {
   @include rules('m-color-grey-1');
 
+  body.dark &,
   .app[data-theme='dark'] & {
     @include rules('m-color-white');
   }
